# local-mcp-ollama

./: README.md  mcp_state.db  pyproject.toml
src/mcp/: client_examples.py  db.py  mcp_protocol.py  server.py  utils.py  worker.py
